# ros2-robot-motion-lab

./: .gitignore  AGENTS.md  README.md
apps/: README.md
apps/pallet_layout_dashboard/: README.md
docs/architecture/: README.md  modular_motion_architecture.md
docs/commands/: README.md  validated-commands.md
docs/context/: README.md  current-environment-status.md  project-context.md  project_status.md  thesis-context.md
docs/experiments/: EXP-0001-move-joint-service-validation.md  EXP-0002-robot-state-inspection.md  EXP-0003-doosan-services-and-interfaces-mapping.md  EXP-0004-moveline-service-validation.md  EXP-0005-moveit2-planning-validation.md  EXP-0006-gazebo-simulation-validation.md  EXP-0007-motion-command-failure-handling.md  EXP-0008-python-rclpy-service-client-prototype.md  EXP-0009-pallet-layout-core-v0.1.md  README.md  experiment-log.md
docs/implementation/: README.md  pallet_layout_core_notes.md
docs/study/: learning-map.md
docs/templates/: README.md  adr_template.md  experiment_template.md
docs/thesis_notes/: README.md  chapter_01_introduction_notes.md  learning_map.md  (+5 more)
notebooks/: README.md
reports/: README.md
ros2_packages/: README.md
ros2_packages/pallet_layout_core/: README.md  pyproject.toml
ros2_packages/pallet_layout_core/examples/: generate_basic_layout.py
ros2_packages/pallet_layout_core/src/pallet_layout_core/: __init__.py  exporters.py  layout_generator.py  models.py  validators.py
ros2_packages/pallet_layout_core/tests/: test_exporters.py  test_layout_generator.py  test_validators.py
scripts/: README.md
(+21 files in other folders)
